--- a/src/Components/Answers/index.scss
+++ b/src/Components/Answers/index.scss
@@ -3,6 +3,11 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  background-color: #303030;
+  border-radius: 10px;
+  padding: 0 10px;
+  margin: 10px 0;
+  border: 1px solid rgba(255, 255, 255, 0.53);
 }
 
 [type="radio"]:checked + span:after,
