--- a/src/Components/Header/index.scss
+++ b/src/Components/Header/index.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   font-size: 2rem;
+  border: 1px solid rgba(255, 255, 255, 0.53);
   &__logo {
     width: 200px;
     height: 140px;
@@ -10,12 +11,13 @@
   }
   &__score{
     font-family: Roboto;
-    margin-right: 20px;
+    margin-right: 40px;
   }
 }
 .blue {
   display: flex;
   justify-content: space-around;
+  border: 1px solid rgba(255, 255, 255, 0.53);
   :hover {
     cursor: pointer;
   }
